added showResults function
showResults function evaluates submitted answers and displays score.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
   <body>
     <div id="quiz"></div>
-    <button id="button">Submit</button>
-
+    <button id="submit">Submit</button>
+    <div id="results"></div>
     <script src="src/index.js"></script>
   </body>
 </html>
