--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   </head>
 
   <body>
-    <div id="quiz"></div>
+    <div class="quiz-container">
+      <div id="quiz"></div>
+    </div>
+    <button id="previous">Previous Question</button>
+    <button id="next">Next Question</button>
     <button id="submit">Submit</button>
     <div id="results"></div>
     <script src="src/index.js"></script>
